--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:text="change" />
+    <!--<Button-->
+        <!--android:id="@+id/button_3"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:text="change" />-->
 
 
-
-    <FrameLayout
-        android:id="@+id/fragmentA"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/maylay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/button_3"
-        android:layout_marginTop="-48dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp" />
 
-    </FrameLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <!--<FrameLayout-->
+        <!--android:id="@+id/fragmentA"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_below="@+id/button_3"-->
+        <!--android:layout_marginTop="-48dp">-->
+
+    <!--</FrameLayout>-->
 
 </RelativeLayout>
